+ generator tools